--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - /root/.m2
       - /root/.clojure
       - /root/.gitlibs
+      - /root/.datomic/storage/
     ports:
       - "8080:8080"
     working_dir: /app
